--- a/app/src/main/res/layout/product_detail_activity.xml
+++ b/app/src/main/res/layout/product_detail_activity.xml
@@ -83,6 +83,7 @@
 
                     <TextView
                         android:id="@+id/textProductIdValue"
+                        android:singleLine="true"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_below="@id/textProductNameValue"
