--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,4 +25,59 @@
         <item name="android:layout_height">wrap_content</item>
     </style>
 
+    <style name="style_16_507FD8">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#507FD8</item>
+    </style>
+
+    <style name="style_16_666666">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#666666</item>
+    </style>
+
+    <style name="style_18_000000_BOLD">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="style_17_FFFFFF_BOLD">
+        <item name="android:textSize">17sp</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:textStyle">bold</item>
+
+    </style>
+
+    <style name="style_18_A10D0B_BOLD">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">#A10D0B</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="style_14_4B4B4B">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">#4B4B4B</item>
+    </style>
+
+    <style name="style_14_A10D0B">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">#A10D0B</item>
+    </style>
+
+    <style name="style_15_666666">
+        <item name="android:textSize">15sp</item>
+        <item name="android:textColor">#666666</item>
+    </style>
+
+    <style name="style_13_9F9F9F">
+        <item name="android:textSize">13sp</item>
+        <item name="android:textColor">#9F9F9F</item>
+    </style>
+
+    <style name="style_14_C21513_BOLD">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">#C21513</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
 </resources>
