--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -80,4 +80,27 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="style_18_666666">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">#666666</item>
+    </style>
+
+    <style name="style_13_4B4B4B_BOLD">
+        <item name="android:textSize">13sp</item>
+        <item name="android:textColor">#4B4B4B</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="style_13_FFFFFF_BOLD">
+        <item name="android:textSize">13sp</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="style_14_9F9F9F_BOLD">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">#9F9F9F</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
 </resources>
